<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ppv.activitys.LoginActivity"
    android:orientation="vertical">

    <!-- barra de tarefas -->
    <include
        android:id="@+id/my_toolbar_login"
        layout="@layout/barra_tarefas" />

    <ScrollView
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/login_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:layout_margin="10dp"
                    android:onClick="login"/>
                <Button
                    android:id="@+id/btn_criar_conta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/cadastrar"
                    android:layout_margin="10dp"
                    android:onClick="criarConta"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>